# phishing-detection-bert-ner

./: .gitignore  .pre-commit-config.yaml  fix_installation.py  pd.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run_cli.py  setup.py  test_cli_functionality.py  test_hook.py
.github/ISSUE_TEMPLATE/: epic.md  feature.md
src/: cli.py
src/utils/: __init__.py  logger.py
